Overlay: Resolve Cell/Widget Video Content Overlap

--- a/css/front-flex.less
+++ b/css/front-flex.less
@@ -48,6 +48,11 @@
 	right: 0;
 	bottom: 0;
 	left: 0;
+
+	.panel-cell-style > &,
+	.so-panel > & {
+		z-index: -1;
+	}
 }
 
 // Prevent content appearing behind the overlay.
